--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.2.1",
     "mongoose": "^9.1.2",
     "node-fetch": "^3.3.2",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.13.0",
+    "socket.io": "^4.8.1"
   }
 }
