--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^9.1.2",
     "node-fetch": "^3.3.2",
     "rss-parser": "^3.13.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "pm2": "^5.3.0"
   }
 }
