--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "keywords": ["discord", "bot", "dashboard", "nodejs", "railway"],
   "author": "Filipe Ferreira",
   "license": "ISC",
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
