--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "node": "20.x"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.1.2",
     "rss-parser": "^3.13.0",
     "socket.io": "^4.8.1"
