--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.1.2",
     "rss-parser": "^3.13.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "helmet": "^7.0.0"
   }
 }
